--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,31 @@
-Flask
-Flask-JWT-Extended
-Flask-RESTful
-Flask-SQLAlchemy
-marshmallow
-flask-marshmallow
-marshmallow-sqlalchemy
-requests
-python-dotenv
+aniso8601==9.0.1
+appdirs==1.4.4
+black==21.7b0
+certifi==2021.5.30
+charset-normalizer==2.0.3
+click==8.0.1
+colorama==0.4.4
+Flask==2.0.1
+Flask-JWT-Extended==4.2.3
+flask-marshmallow==0.14.0
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.0
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+marshmallow==3.12.2
+marshmallow-sqlalchemy==0.26.1
+mypy-extensions==0.4.3
+pathspec==0.9.0
+PyJWT==2.1.0
+python-dotenv==0.18.0
+pytz==2021.1
+regex==2021.7.6
+requests==2.26.0
+six==1.16.0
+SQLAlchemy==1.4.21
+tomli==1.1.0
+urllib3==1.26.6
+Werkzeug==2.0.1
